--- a/.gitmodules
+++ b/.gitmodules
@@ -1,42 +1,45 @@
 [submodule "YouCompleteMe"]
-	path = YouCompleteMe
-	url = ./bundle/YouCompleteMe
+	path = bundle/YouCompleteMe
+	url = https://github.com/Valloric/YouCompleteMe.git
 [submodule "vim-plugin-autosess"]
-	path = vim-plugin-autosess
-	url = ./bundle/vim-plugin-autosess
+	path = bundle/vim-plugin-autosess
+	url = https://github.com/powerman/vim-plugin-autosess.git
 [submodule "ack.vim"]
-	path = ack.vim
-	url = ./bundle/ack.vim
+	path = bundle/ack.vim
+	url = https://github.com/mileszs/ack.vim.git
 [submodule "tagbar"]
-	path = tagbar
-	url = ./bundle/tagbar/
-[submodule "fzf.vim"]
-	path = fzf.vim
-	url = ./bundle/fzf.vim/
+	path = bundle/tagbar
+	url = https://github.com/majutsushi/tagbar.git
 [submodule "promptline.vim"]
-	path = promptline.vim
-	url = ./bundle/promptline.vim
+	path = bundle/promptline.vim
+	url = https://github.com/edkolev/promptline.vim.git
 [submodule "vim-airline"]
-	path = vim-airline
-	url = ./bundle/vim-airline
+	path = bundle/vim-airline
+	url = https://github.com/vim-airline/vim-airline.git
 [submodule "vim-airline-themes"]
-	path = vim-airline-themes
-	url = ./bundle/vim-airline-themes/
+	path = bundle/vim-airline-themes
+	url = https://github.com/vim-airline/vim-airline-themes.git
 [submodule "vim-bookmarks"]
-	path = vim-bookmarks
-	url = ./bundle/vim-bookmarks/
+	path = bundle/vim-bookmarks
+	url = https://github.com/MattesGroeger/vim-bookmarks.git
 [submodule "vim-fugitive"]
-	path = vim-fugitive
-	url = ./bundle/vim-fugitive/
+	path = bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim-pug"]
-	path = vim-pug
-	url = ./bundle/vim-pug/
+	path = bundle/vim-pug
+	url = https://github.com/digitaltoad/vim-pug.git
 [submodule "vim-sleuth"]
-	path = vim-sleuth
-	url = ./bundle/vim-sleuth/
+	path = bundle/vim-sleuth
+	url = https://github.com/tpope/vim-sleuth.git
 [submodule "vim-startify"]
-	path = vim-startify
-	url = ./bundle/vim-startify/
+	path = bundle/vim-startify
+	url = https://github.com/mhinz/vim-startify.git
 [submodule "vim-stylus"]
-	path = vim-stylus
-	url = ./bundle/vim-stylus/
+	path = bundle/vim-stylus
+	url = https://github.com/wavded/vim-stylus.git
+[submodule "bundle/fzf"]
+	path = bundle/fzf
+	url = https://github.com/junegunn/fzf.git
+[submodule "bundle/fzf.vim"]
+	path = bundle/fzf.vim
+	url = https://github.com/junegunn/fzf.vim.git
